let syntax fix